<resources>
    <string name="welcome_message">Welcome back</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in_button">Sign in</string>
    <string name="sign_up_button">Sign up</string>
    <string name="no_user">No user found on this username</string>
    <string name="fill_both">Fill both fields to sign in</string>
    <string name="wrong_password">Wrong password, if you have forgotten your password, press forgot your password</string>
    <string name="welcome">Password correct, welcome!</string>
    <string name="username2">Username</string>
    <string name="password_box">Password</string>
    <string name="password_box2">Password again</string>
    <string name="email_box">E-mail</string>
    <string name="age_box">Age</string>
    <string name="city_box">Home city</string>
    <string name="name_box">Name</string>
    <string name="info">Create a new user!</string>
    <string name="password_not_good">Check the password or username</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="password_correct">Passwords are the same</string>
    <string name="password_incorrect">Check the passwords to match</string>
    <string name="contain_numbers">Password must contain at least one number</string>
    <string name="contain_upper">Password must contain at least one uppercase letter</string>
    <string name="contain_lower">Password must contain at least one lowercase letter</string>
    <string name="contain_special">Password must contain at least one special character</string>
    <string name="password_length">Password must be at least 12 characters long</string>
    <string name="error">Fill all the information in order to create a profile</string>
    <string name="create">CREATE</string>
    <string name="bottom_nav_add_data">Add data</string>
    <string name="bottom_nav_progress">Progress</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_statistics">Statistics</string>
    <string name="bottom_nav_settings">Settings</string>
    <string name="change_username">Change username</string>
    <string name="change_password">Change password</string>
    <string name="change_age">Change age</string>
    <string name="change_home_city">Change home city</string>
    <string name="change_email">Change email</string>
    <string name="change_language">Change language</string>
    <string name="old_username">Current username:</string>
    <string name="old_password">Current password:</string>
    <string name="old_age">Current age:</string>
    <string name="old_home_city">Current home city:</string>
    <string name="old_email">Current email:</string>
    <string name="new_username">New username</string>
    <string name="new_password">New password</string>
    <string name="new_age">New age</string>
    <string name="new_home_city">Set new homecity</string>
    <string name="new_email">New e-mail</string>
    <string name="changed_username">Username changed</string>
    <string name="changed_age">Age changed</string>
    <string name="changed_home_city">Home city changed</string>
    <string name="changed_email">E-mail changed</string>
    <string name="changed_password">Password changed</string>
    <string name="new_password_wrong">Password wrong</string>
    <string name="save_changes">Save changes</string>
    <string name="choose_language">Choose language...</string>
    <string name="usernameTaken">Username already taken</string>
    <string name="file_username" translatable="false">Username:</string>
    <string name="file_name" translatable="false">Name:</string>
    <string name="file_age" translatable="false">Age:</string>
    <string name="file_city" translatable="false">City:</string>
    <string name="file_password" translatable="false">Password:</string>
    <string name="file_email" translatable="false">Email:</string>
    <string name="add_data_food">Add food data</string>
    <string name="add_data_housing">Add housing data</string>
    <string name="add_data_travel">Add travel data</string>
    <string name="add_data_clothes">Add consumption data</string>
    <string name="add_data_waste">Add recycling data</string>
    <string name="add_data_information">Here you can add your consumption</string>
    <string name="add_data_unit1">kg/week</string>
    <string name="add_data_unit2">pcs/week</string>
    <string name="add_data_unit3">€/m</string>
    <string name="submit_data_btn">Submit data</string>
    <string name="radio_btn1">Vegan</string>
    <string name="radio_btn2">Vegetarian</string>
    <string name="radio_btn3">Omnivore</string>
    <string name="food_data_beef">Beef</string>
    <string name="food_data_fish">Fish</string>
    <string name="food_data_pork">Pork</string>
    <string name="food_data_cheese">Cheese</string>
    <string name="food_data_dairy">Dairy</string>
    <string name="food_data_rice">Rice</string>
    <string name="food_data_vegetables">Fresh vegetables during winter</string>
    <string name="food_data_eggs">Eggs</string>
    <string name="food_data_low_carbon">I prefer low-carbon choices in my diet</string>
    <string name="food_data_diet">DIET</string>
    <string name="food_data_restaurant">Monthly cáfe/restaurant spendings</string>
    <string name="Toast_cafe">You must add your cáfe/restaurant spendings.</string>
    <string name="Toast_diet">You must add your diet before you can submit data.</string>
    <string name="Toast_restaurant">The field RestaurantSpending must be between 0 and 800.</string>
    <string-array name="waste_options1">
        <item>Never</item>
        <item>Sometimes</item>
        <item>Often</item>
        <item>Always</item>
    </string-array>
    <string-array name="waste_options2">
        <item>Low</item>
        <item>Normal</item>
        <item>High</item>
    </string-array>
    <string name="waste_title">Here you can submit your recycling data</string>
    <string name="waste_subtitle">How often do you recycle following materials:</string>
    <string name="waste_text">In EU average amount of waste generated per person in a year is 480kg. (1,3kg per day)</string>
    <string name="bioWaste">Bio waste</string>
    <string name="carton">Carton</string>
    <string name="electronic">Electronic</string>
    <string name="glass">Glass</string>
    <string name="hazardous">Hazardous</string>
    <string name="metal">Metal</string>
    <string name="paper">Paper</string>
    <string name="plastic">Plastic</string>
    <string name="total">The amount of waste</string>
    <string name="consumption_unit">€/m</string>
    <string name="consumption_title">Here you can add your consumption data</string>
    <string name="consumption_title1">Check the box if you favour low carbon products</string>
    <string name="consumption_clothing">Clothing</string>
    <string name="consumption_shoes">Shoes</string>
    <string name="consumption_electronics">Electronics</string>
    <string name="consumption_paper">Paper books and magazines</string>
    <string name="consumption_recreation">Recreation</string>
    <string name="consumption_communication">Phone/internet</string>
    <string name="consumption_other">Other consumption</string>
    <string name="consumption_title2">Goods</string>
    <string name="consumption_title3">Services</string>
    <string name="consumption_low_carbon">Low carbon</string>
    <string name="consumption_toast1">The field Clothing must be between 0 and 1000.</string>
    <string name="consumption_toast2">The field Shoes must be between 0 and 1000.</string>
    <string name="consumption_toast3">The field Paper must be between 0 and 1000.</string>
    <string name="consumption_toast4">The field Electronics must be between 0 and 1000.</string>
    <string name="consumption_toast5">The field Recreation must be between 0 and 5000.</string>
    <string name="consumption_toast6">The field Communications must be between 0 and 1000.</string>
    <string name="consumption_toast7">The field Other must be between 0 and 3000.</string>
    <string name="housing_home">Home</string>
    <string name="housing_heating">Heating</string>
    <string name="housing_electricity">Electricity</string>
    <string name="housing_goods">Goods and services for </string>
    <string name="housing_second_home">Second home</string>
    <string name="housing_housetype_text">Housing type</string>
    <string name="housing_housetype1">Detached house</string>
    <string name="housing_housetype2">Flat</string>
    <string name="housing_housetype3">Terraced House</string>
    <string name="housing_space">Living space</string>
    <string name="housing_construction">Year of construction</string>
    <string name="housing_floors">The number of floors</string>
    <string name="housing_district_heating">District heating</string>
    <string name="housing_oil">Oil heating</string>
    <string name="housing_ground_heat">Ground source heat pump</string>
    <string name="housing_electricity_heat">Electricity</string>
    <string name="housing_pellet">Wood pellet/chips</string>
    <string name="housing_additional_heat">Additional Heating</string>
    <string name="housing_air_heat">Air heat pump</string>
    <string name="housing_own_heat">Your own electricity</string>
    <string name="housing_district_heating_consumption">kWh/year</string>
    <string name="housing_oil_consumption">l/year</string>
    <string name="livingSpace">m^2</string>
    <string name="housing_eur_per_year">€/year</string>
    <string name="housing_electricity_per_year">Yearly consumption</string>
    <string name="housing_kWh">kWh/year</string>
    <string name="housing_green_percent">The green electricity percentage</string>
    <string name="housing_percent">%</string>
    <string name="housing_furniture">Furniture</string>
    <string name="housing_appliances">Appliances</string>
    <string name="housing_tableware">Miscellaneous</string>
    <string name="housing_renovation">Renovation</string>
    <string name="housing_cleaning">Cleaning</string>
    <string name="housing_total">TOTAL</string>
    <string name="housing_toast1">The field district heat consumption must be between 0 and 130000.</string>
    <string name="housing_toast2">The field heating oil consumption must be between 0 and 130000.</string>
    <string name="housing_toast3">The field area must be between 10 and 500.</string>
    <string name="housing_toast4">The field BuildYear must be between 1900 and 2030.</string>
    <string name="housing_toast5">The field floor count must be between 1 and 40.</string>
    <string name="housing_toast6">The field family must be between 1 and 15.</string>
    <string name="housing_toast7">The field electricity consumption must be between 0 and 150000.</string>
    <string name="housing_toast8">The field green electricity percentage must be between 0 and 100.</string>
    <string name="housing_toast9">The field appliance purchases must be between 0 and 10000.</string>
    <string name="housing_toast10">The field furniture purchases must be between 0 and 10000.</string>
    <string name="home_target">Go to work/school/market by bike</string>
    <string name="home_target2">Take a bag with you to store, so you don\'t have to buy a plastic bag</string>
    <string name="home_target3">Think twice before buying a new commodity do you need it</string>
    <string name="progress_label_exercise">Here you can add your exercise</string>
    <string name="progress_minute">minutes today</string>
    <string name="progress_exercise">Exercise today:</string>
    <string name="progress_label_weight">Here you can add your weight</string>
    <string name="progress_kg">kg</string>
    <string name="progress_weight">Weight today:</string>
    <string name="weight_progress">Your weight progress</string>
    <string name="exercise_progress">Your exercise progress</string>
</resources>