<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Begin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ebe1a4">

    <TextView
        android:id="@+id/settings_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20sp"
        android:paddingBottom="10sp"
        android:text="@string/bottom_nav_settings"
        android:textSize="45sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/change_language_btn"
        android:layout_width="0sp"
        android:layout_height="wrap_content"

        android:background="@drawable/login_button_theme"

        android:text="@string/change_language"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/change_email_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/change_username_btn"
        android:layout_width="0sp"
        android:layout_height="wrap_content"

        android:background="@drawable/login_button_theme"
        android:text="@string/change_username"
        app:layout_constraintBottom_toTopOf="@+id/change_password_btn"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/settings_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/change_password_btn"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button_theme"
        android:text="@string/change_password"
        app:layout_constraintBottom_toTopOf="@+id/change_age_btn"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/change_username_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/change_age_btn"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button_theme"

        android:text="@string/change_age"
        app:layout_constraintBottom_toTopOf="@+id/change_home_city_btn"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/change_password_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/change_home_city_btn"
        android:layout_width="0sp"
        android:layout_height="wrap_content"

        android:background="@drawable/login_button_theme"

        android:text="@string/change_home_city"
        app:layout_constraintBottom_toTopOf="@+id/change_email_btn"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/change_age_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/change_email_btn"
        android:layout_width="0sp"
        android:layout_height="wrap_content"

        android:background="@drawable/login_button_theme"

        android:text="@string/change_email"

        app:layout_constraintBottom_toTopOf="@+id/change_language_btn"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/change_home_city_btn" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />
</androidx.constraintlayout.widget.ConstraintLayout>
