<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/exercise"
                android:layout_width="69dp"
                android:layout_height="38dp"
                android:ems="10"
                android:inputType="numberDecimal"
                app:layout_constraintBottom_toTopOf="@+id/submit_exercise"
                app:layout_constraintEnd_toStartOf="@+id/textView93"
                app:layout_constraintHorizontal_bias="0.514"
                app:layout_constraintStart_toEndOf="@+id/textView92"
                app:layout_constraintTop_toBottomOf="@+id/textView91"
                app:layout_constraintVertical_bias="0.59"
                tools:ignore="LabelFor"
                android:importantForAutofill="no" />

            <com.jjoe64.graphview.GraphView
                android:id="@+id/exercise_graph"
                android:layout_width="match_parent"
                android:layout_height="200dip"
                android:layout_marginTop="180dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingClass,MissingConstraints"
                tools:layout_editor_absoluteX="0dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submit_exercise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_button_theme"
                android:padding="8sp"
                android:text="@string/submit_data_btn"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/exercise_graph"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.924" />

            <TextView
                android:id="@+id/textView94"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progress_label_weight"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/weight_graph"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/exercise_graph"
                app:layout_constraintVertical_bias="0.034" />

            <EditText
                android:id="@+id/weight"
                android:layout_width="75dp"
                android:layout_height="39dp"
                android:ems="10"
                android:inputType="numberDecimal"
                app:layout_constraintBottom_toTopOf="@+id/submit_weight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.096"
                app:layout_constraintStart_toEndOf="@+id/textView95"
                app:layout_constraintTop_toBottomOf="@+id/textView94"
                tools:ignore="LabelFor"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/textView93"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progress_minute"
                app:layout_constraintBottom_toTopOf="@+id/submit_exercise"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.785"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView91"
                app:layout_constraintVertical_bias="0.576" />

            <TextView
                android:id="@+id/textView91"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progress_label_exercise"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/submit_exercise"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.465"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.059" />

            <TextView
                android:id="@+id/textView92"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progress_exercise"
                app:layout_constraintBottom_toBottomOf="@+id/exercise"
                app:layout_constraintEnd_toStartOf="@+id/textView93"
                app:layout_constraintHorizontal_bias="0.343"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/exercise"
                app:layout_constraintVertical_bias="0.463" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submit_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:background="@drawable/login_button_theme"
                android:padding="8sp"
                android:text="@string/submit_data_btn"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/weight_graph"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView94" />

            <TextView
                android:id="@+id/textView95"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progress_weight"
                app:layout_constraintBottom_toBottomOf="@+id/weight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.196"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/weight"
                app:layout_constraintVertical_bias="0.44" />

            <TextView
                android:id="@+id/textView96"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progress_kg"
                app:layout_constraintBottom_toTopOf="@+id/submit_weight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.097"
                app:layout_constraintStart_toEndOf="@+id/weight"
                app:layout_constraintTop_toBottomOf="@+id/textView94"
                app:layout_constraintVertical_bias="0.44" />

            <com.jjoe64.graphview.GraphView
                android:id="@+id/weight_graph"
                android:layout_width="match_parent"
                android:layout_height="200dip"
                android:layout_marginTop="152dp"
                app:layout_constraintTop_toBottomOf="@+id/exercise_graph"
                tools:ignore="MissingClass,MissingConstraints"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/textView97"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:layout_marginStart="8sp"
                android:text="@string/exercise_progress"
                app:layout_constraintBottom_toTopOf="@+id/exercise_graph"
                app:layout_constraintEnd_toStartOf="@+id/submit_exercise"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/submit_exercise"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textView98"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:layout_marginStart="8sp"
                android:text="@string/weight_progress"
                app:layout_constraintBottom_toTopOf="@+id/weight_graph"
                app:layout_constraintEnd_toStartOf="@+id/submit_weight"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/submit_weight"
                app:layout_constraintVertical_bias="1.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>


